<resources>
    <string name="app_name">FaikPhone</string>

    <string name="mobile_carrier">SKT</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_switch_mode">공기계/본 핸드폰 모드 변경</string>
    <string name="pref_description_switch_mode">
        On 할 시 공기계, Off 할 시 본 핸드폰 모드로 변경됩니다.
    </string>

    <string name="pref_connection_real">인증 코드 보기</string>
    <string name="pref_connection_fake">연결 요청 보내기</string>

    <!--Connection Dialog Title-->
    <string name="pref_connection_dialog_real">인증 코드 보기</string>
    <string name="pref_connection_dialog_fake">코드 입력</string>

    <string name="pref_code_refresh_real">인증 코드 재발급</string>
    <string name="pref_disconnect_fake">연결 끊기</string>
    <string name="pref_disconnect_real">공기계 연결 끊기</string>

    <string name="pref_statusbar_view">상단바 위장 적용 여부</string>

    <string name="refresh_alert_real">정말로 인증 코드를 재발급받으시겠습니까?</string>
    <string name="refresh_alert_fake">정말로 연결을 끊으시겠습니까? </string>
    
    <string name="check_connection_status">연결 상태 체크</string>
    
    <string name="preferences_changed_broadcast">com.faikphone.client.PREFERENCES_CHANGED_BROADCAST</string>
</resources>
