<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="prefer_screen">

    <SwitchPreference
        android:defaultValue="true"
        android:key="fake_switch"
        android:summary="@string/pref_description_switch_mode"
        android:title="@string/pref_title_switch_mode" />

    <EditTextPreference
        android:title="@string/pref_connection_fake"
        android:key="fake_connection">
    </EditTextPreference>

    <Preference
        android:title="@string/check_connection_status"
        android:key="fake_check_connection">
    </Preference>

    <Preference
        android:title="@string/pref_disconnect_fake"
        android:key="fake_disconnect">
    </Preference>

    <Preference
        android:title="@string/pref_disconnect_real"
        android:key="real_disconnect">
    </Preference>

    <Preference
        android:title="@string/pref_connection_dialog_real"
        android:key="real_code_view">
    </Preference>

    <Preference
        android:title="@string/pref_code_refresh_real"
        android:key="real_code_refresh">
    </Preference>

    <SwitchPreference
        android:defaultValue="false"
        android:key="fake_statusbar"
        android:title="@string/pref_statusbar_view" />

</PreferenceScreen>
